- Conditionals collapsing

Runtime
- name style prepend got a few more options and consistency 
- add ParserEvents: skipped, advanced
- add LineReader: virtual_choices, choice_pressed_virtual, chatlog_tint_full_line, text_content_word_wrappers
- rename and restructure some variables (most notably text_content is now body_label)
- Parser.reset_and_start got line index argument (ioydoy cameo)

VN Template
- improve template by using _unhaled_inout instead of _input, fixing a few input bugs
- add screen fade in / out
- tscn CG support (they have to be Control nodes)

under the hood
- move instruction argument interpreting parser-side. this shrinks files down a bit and gets rid of a bit of code duplication since inline calls were interpreted at runtime already. regular instructions now just follow suit.
- give lines an ID. Isn't used directly but should help with tracking things throughout merge conflicts
- some code cleanup in the plugin itself!

-------------------------------------------------
DIISIS 0.5.1 2025-03-18

General
- add comment tag <comment:some info>
	- will be invisible in the UI but get printed to the console
	- ParserEvents.comment also added

Editor
- new file was broken. got fixed

Runtime
- more features related to LineReader.keep_past_lines
- add chatlog layouting option to LineReader
- add LineReader.full_words

VN template
- generalzed notice screen in template


-------------------------------------------------
DIISIS 0.5 2025-03-13

General
- Upgrade to Godot 4.4
- use typed dictionaries where appripriate

Editor
- more keyboard shortcuts
- fixes re:address mode


-------------------------------------------------
DIISIS 0.4.1 2025-03-12

General
- GitHub issue temlates

Editor
- Handle elipses (...) in the Capitalize function of text lines
- more features around address mode buttons (page menu reset button and more)

VN template
- add cg fadeout


-------------------------------------------------
DIISIS 0.4 changelog 2025-03-04