@@ -1,4 +1,4 @@
-[gd_scene load_steps=44 format=3 uid="uid://r1ntcqdujfol"]
+[gd_scene load_steps=43 format=3 uid="uid://r1ntcqdujfol"]
 
 [ext_resource type="Script" uid="uid://j84s4qlkmfxw" path="res://game/stages/game_stage.gd" id="1_a36me"]
 [ext_resource type="Script" uid="uid://rq52trv32gab" path="res://addons/diisis/parser/src/line_reader.gd" id="1_h4afo"]
@@ -7,7 +7,6 @@
 [ext_resource type="Script" uid="uid://brouc1vl1o5us" path="res://game/stages/objects.gd" id="3_x2eff"]
 [ext_resource type="Script" uid="uid://odc5pcwes4bj" path="res://game/stages/instruction_handler_intro.gd" id="4_u8vmc"]
 [ext_resource type="Texture2D" uid="uid://delwppkladi0u" path="res://addons/diisis/editor/visuals/more.svg" id="5_7sulw"]
-[ext_resource type="Script" uid="uid://mewk84fljr5k" path="res://game/diisis_integration/inline_eval.gd" id="6_8ao3j"]
 [ext_resource type="Texture2D" uid="uid://bh7mo1v26xtqq" path="res://addons/diisis/editor/visuals/theme/buttons_ui/helpZeichenfläche 3.png" id="6_mh4vb"]
 [ext_resource type="PackedScene" uid="uid://qkegdwc8ux5o" path="res://game/stages/black_fade.tscn" id="8_50byo"]
 [ext_resource type="Script" uid="uid://c2vvnjn4tl6a7" path="res://game/stages/game_camera.gd" id="9_lbjue"]
@@ -87,6 +86,36 @@ grow_vertical = 2
 focus_mode = 2
 mouse_filter = 2
 script = ExtResource("1_a36me")
+
+[node name="LineReader" type="Control" parent="." node_paths=PackedStringArray("name_label", "body_label", "choice_list", "instruction_handler", "text_container", "name_container", "choice_container", "choice_title_label", "prompt_unfinished", "prompt_finished")]
+layout_mode = 3
+anchors_preset = 0
+offset_right = 40.0
+offset_bottom = 40.0
+mouse_filter = 2
+script = ExtResource("1_h4afo")
+auto_pause_duration = 0.4
+blank_names = Array[String](["narrator"])
+name_map = Dictionary[String, String]({
+"amber": "Amber"
+})
+name_label = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/Label")
+body_label = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/RichTextLabel")
+choice_list = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/ChoiceContainer/VBoxContainer/ChoiceOptionContainer")
+instruction_handler = NodePath("../InstructionHandler")
+text_container = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1")
+name_container = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/PanelContainer")
+choice_container = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/ChoiceContainer")
+choice_title_label = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/ChoiceContainer/VBoxContainer/Label")
+choice_button_keyboard_focus = false
+show_input_prompt = true
+input_prompt_delay = 1.29
+input_prompt_lerp_weight = 0.233
+prompt_unfinished = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/HBoxContainer/PageUnfinished")
+prompt_finished = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/HBoxContainer/PageFinished")
+
+[node name="InstructionHandler" type="Node" parent="."]
+script = ExtResource("4_u8vmc")
 
 [node name="Objects" type="Node2D" parent="."]
 script = ExtResource("3_x2eff")
@@ -590,40 +619,12 @@ grow_horizontal = 2
 grow_vertical = 2
 mouse_filter = 2
 
-[node name="InstructionHandler" type="Node" parent="."]
-script = ExtResource("4_u8vmc")
-
-[node name="LineReader" type="Control" parent="." node_paths=PackedStringArray("name_label", "body_label", "choice_list", "instruction_handler", "text_container", "name_container", "choice_container", "choice_title_label", "inline_evaluator", "prompt_unfinished", "prompt_finished")]
-layout_mode = 3
-anchors_preset = 0
-offset_right = 40.0
-offset_bottom = 40.0
-mouse_filter = 2
-script = ExtResource("1_h4afo")
-auto_pause_duration = 0.4
-blank_names = Array[String](["narrator"])
-name_map = Dictionary[String, String]({
-"amber": "Amber"
-})
-name_label = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/Label")
-body_label = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/RichTextLabel")
-choice_list = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/ChoiceContainer/VBoxContainer/ChoiceOptionContainer")
-instruction_handler = NodePath("../InstructionHandler")
-text_container = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1")
-name_container = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/PanelContainer")
-choice_container = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/ChoiceContainer")
-choice_title_label = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/ChoiceContainer/VBoxContainer/Label")
-inline_evaluator = NodePath("../InstructionHandler")
-choice_button_keyboard_focus = false
-show_input_prompt = true
-input_prompt_delay = 1.29
-input_prompt_lerp_weight = 0.233
-prompt_unfinished = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/HBoxContainer/PageUnfinished")
-prompt_finished = NodePath("../Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/HBoxContainer/PageFinished")
-
-[node name="InlineEval" type="Node" parent="."]
-script = ExtResource("6_8ao3j")
-
+[connection signal="request_object_visible" from="InstructionHandler" to="Objects" method="set_object_visible"]
+[connection signal="splatter" from="InstructionHandler" to="." method="_on_instruction_handler_splatter"]
+[connection signal="start_black_fade" from="InstructionHandler" to="Camera2D/CanvasLayer/VNUIRoot/BlackFade" method="_on_handler_start_black_fade"]
+[connection signal="start_hide_cg" from="InstructionHandler" to="." method="hide_cg"]
+[connection signal="start_rolling_credits" from="InstructionHandler" to="Camera2D/CanvasLayer/VNUIRoot/RollingCredits" method="start"]
+[connection signal="start_show_cg" from="InstructionHandler" to="." method="_on_handler_start_show_cg"]
 [connection signal="meta_clicked" from="Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
 [connection signal="meta_hover_ended" from="Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_hover_ended"]
 [connection signal="meta_hover_started" from="Camera2D/CanvasLayer/VNUIRoot/VNUI/TextContainer1/MarginContainer/VBoxContainer/MarginContainer2/Panel/MarginContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_hover_started"]
@@ -639,9 +640,3 @@ script = ExtResource("6_8ao3j")
 [connection signal="mouse_entered" from="Camera2D/CanvasLayer/VNUIRoot/VNUI/ControlsContainer/MenuButton" to="." method="increment_advance_blocker"]
 [connection signal="mouse_exited" from="Camera2D/CanvasLayer/VNUIRoot/VNUI/ControlsContainer/MenuButton" to="." method="decrement_advance_blocker"]
 [connection signal="pressed" from="Camera2D/CanvasLayer/VNUIRoot/VNUI/ControlsContainer/MenuButton" to="." method="_on_menu_button_pressed"]
-[connection signal="request_object_visible" from="InstructionHandler" to="Objects" method="set_object_visible"]
-[connection signal="splatter" from="InstructionHandler" to="." method="_on_instruction_handler_splatter"]
-[connection signal="start_black_fade" from="InstructionHandler" to="Camera2D/CanvasLayer/VNUIRoot/BlackFade" method="_on_handler_start_black_fade"]
-[connection signal="start_hide_cg" from="InstructionHandler" to="." method="hide_cg"]
-[connection signal="start_rolling_credits" from="InstructionHandler" to="Camera2D/CanvasLayer/VNUIRoot/RollingCredits" method="start"]
-[connection signal="start_show_cg" from="InstructionHandler" to="." method="_on_handler_start_show_cg"]
