@@ -32,6 +32,7 @@ Runtime
 - add LineReader: virtual_choices, choice_pressed_virtual, chatlog_tint_full_line, text_content_word_wrappers
 - rename and restructure some variables (most notably text_content is now body_label)
 - Parser.reset_and_start got line index argument (ioydoy cameo)
+- remove LineReader: property_for_name (was depricated) and inline_evaluator (merged with instruction_handler)
 
 VN Template
 - improve template by using _unhaled_inout instead of _input, fixing a few input bugs
@@ -42,6 +43,7 @@ under the hood
 - move instruction argument interpreting parser-side. this shrinks files down a bit and gets rid of a bit of code duplication since inline calls were interpreted at runtime already. regular instructions now just follow suit.
 - give lines an ID. Isn't used directly but should help with tracking things throughout merge conflicts
 - some code cleanup in the plugin itself!
+- change LineReader to inherit from Node instead of Control
 
 -------------------------------------------------
 DIISIS 0.5.1 2025-03-18
